--- a/config.json
+++ b/config.json
@@ -1,18 +1,83 @@
 {
   "enabled": true,
-  "carId": 1,
-  "startLatitude": 49.330690880652504,
-  "startLongitude": 13.655896129527061,
-  "startRadius": 100,
-  "startTime": "2020-12-20T11:11:00.000",
-  "hours": 300,
+  "carId": 2,
+  "startLatitude": 49.532655,
+  "startLongitude": 12.135862,
+  "startRadius": 100.0,
+  "startTime": "2020-12-26T16:29:00+00:00",
+  "hours": 24,
   "mergeFromLap": 1,
   "lapsMerged": 1,
   "consumptionRated": 14.7,
-  "statusRefreshSeconds": 5,
+  "statusRefreshSeconds": 3,
   "lapsRefreshSeconds": 10,
   "fioRefreshSeconds": 900,
-  "defaultMapZoom": 16,
-  "previousLaps": 20,
-  "minTimeLap": 10
+  "defaultMapZoom": 21,
+  "previousLaps": 10,
+  "minTimeLap": 10,
+  "mapLabels": [
+    {
+      "field": "car_name",
+      "label": "Car",
+      "default": "---"
+    },
+    {
+      "field": "driver_name",
+      "label": "Driver",
+      "default": "---"
+    }
+  ],
+  "textLabels": [
+    {
+      "field": "car_name",
+      "label": "Car",
+      "default": "---"
+    },
+    {
+      "field": "start_time",
+      "label": "Start time",
+      "format_function": "format_datetime_fn",
+      "format": "DD.MM.YYYY HH:mm:ss",
+      "unit": "",
+      "default": "---"
+    },
+    {
+      "field": "end_time",
+      "label": "End time",
+      "format_function": "format_datetime_fn",
+      "format": "DD.MM.YYYY HH:mm:ss",
+      "unit": "",
+      "default": "---"
+    },
+    {
+      "field": "distance",
+      "label": "Distance",
+      "format_function": "format_float_fn",
+      "format": "%.2f",
+      "unit": "km",
+      "default": "---"
+    },
+    {
+      "field": "time_since_start",
+      "label": "Time since start",
+      "format_function": "format_period_words_fn",
+      "unit": "",
+      "default": "---"
+    },
+    {
+      "field": "time_since_start",
+      "label": "Time since start",
+      "format_function": "format_period_fn",
+      "unit": "",
+      "default": "---"
+    },
+    {
+      "field": "time_to_end",
+      "label": "Time to end",
+      "format_function": "format_period_fn",
+      "unit": "",
+      "default": "---"
+    }
+
+  ]
 }
